--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: start
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -14,6 +14,8 @@ dependencies:
   firebase_ui_auth: ^1.16.0
   firebase_ui_oauth_google: ^1.4.0
   google_sign_in: ^6.2.1
+  english_words: ^4.0.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
